added description of top-level classes of DOL ontology

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7414,9 +7414,28 @@ Applications of the \DOL Ontology include modeling statements about OMS in RDF, 
 \section{Classes and Object Properties of the \DOL Ontology}\label{a:dol-onto-tables}
 
 \cbs
-The classes in the \DOL Ontology (and their annotations) correspond to the terms (and their definitions) in \cref{terms-and-defs}. Classes that are reifications of relations also have been introduced as object properties.\cbe{}  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise.
+The classes in the \DOL Ontology (and their annotations) correspond to the terms (and their definitions) in \cref{terms-and-defs}. Classes that are reifications of relations also have been introduced as object properties.\cbe{}  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise. \cbs
+The \DOL Ontology additionally contains some top-level abstract classes
+as follows:
+
+\includegraphics[width=0.8\textwidth]{dol-onto-classes.png}
+
+This reflects central issues in the structure of \DOL:
+while \DOL, as a language, is a linguistic entity, it is
+related to mathematical entities like logics, signatures and models
+through its semantics. That is, semantic entities provide the
+bridge bewteen linguistic and mathematical entities.
+Moreover, processes (like theorem proving) provide algorithmic
+procedcures for manipulating DOL librares, and tools implement
+these in software.
+
+The top level object properties are structured in a similar way:
+\medskip
+
+\includegraphics[width=0.4\textwidth]{dol-onto-properties.png}
 
 
+\cbe
 
 \section{\DOL Registry}\label{a:registry}
 
