synchronized ontology with standard

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2085,20 +2085,24 @@ Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclus
   \termdefinition{union}{aggregation of several \termref{OMS}
     to a new \termref{OMS}, without any renaming.}
  
-  \termdefinition{OMS translation}{assignment of new names to some \termref{non-logical symbols} of an \termref{OMS}, or translation of an OMS along a language translation.}
+  \termdefinition{OMS translation}{DOL structured OMS expressing the assignment of new names to some \termref{non-logical symbols} of an \termref{OMS}, or translation of an OMS along a language translation.}
 \begin{note}
 An OMS translation results in an \termref{OMS mapping} between the
 original and the renamed OMS.
 \end{note}
 
-  \termdefinition{OMS reduction}{restriction of an \termref{OMS} to a smaller \termref{signature}.}
+  \termdefinition{OMS reduction}{DOL structured OMS expressing the restriction of an \termref{OMS} to a smaller \termref{signature}.}
 
 \cbs
 \termdefinition{local environment}{signature built from all previously-declared 
 symbols and axioms.}
-\cbe
 
-\termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in \cbs the  OMS given by the \termref{local environment}.\cbe}
+\termdefinition{extension}{\termref{structured OMS} extending a given OMS with new symbols and \termref{sentences}.}
+\begin{note}
+The new symbols and sentences are interpreted relative to the
+\termref{local envorinment}, which is the signature of the ``given OMS''. 
+\end{note}
+\cbe
 
 
 
@@ -2202,7 +2206,7 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 \termref{OMS} and thus proves it to be \termref{satisfiable}.}
 \cbe
 
-\termdefinition{module}{\termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}.}
+\termdefinition{module}{structured OMS} expressing a \termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}.}
 %\todonote[author=Christoph Lange]{a more formal definition, from \todonoteURL{http://iswc2011.semanticweb.org/fileadmin/iswc/Papers/PostersDemos/iswc11pd_submission_75.pdf}: Modules are subsets of
 %OMS that preserve all entailments over a set of terms $\Sigma$ called seed signature.  Modules based on syntactic locality are defined in Cuenca Grau, B., Horrocks, I., Kazakov, Y., Sattler, U.: Modular reuse of ontologies: Theory and practice. J. of Artif. Intell. Research 31, 273–318 (2008)}}
   \begin{note}
@@ -2242,11 +2246,11 @@ best possible (in the sense of a maximum set of \termref{logical consequences})
  Technically, a maximum approximant is a uniform interpolant, see \cite{DBLP:conf/ijcai/LutzW11}.
 \end{note}
 
-\termdefinition{approximation}{\termref{structured OMS} that delivers an \termref{approximation}.}
+\termdefinition{approximation}{\termref{structured OMS} that expresses a \termref{maximum approximant}.}
 
-\cbs\termdefinition{filtering}{verbatim removal of \termref{symbols} or \termref{axioms} from an OMS.}
+\cbs\termdefinition{filtering}{\termref{structured OMS} expressing the verbatim removal of \termref{symbols} or \termref{axioms} from an OMS.}
 \begin{note}
-If a symbol is removed, all axioms containing that symbols are removed, too.
+If a symbol is removed, all axioms containing that symbol are removed, too.
 \end{note}
 \cbe
 
@@ -2254,7 +2258,7 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
 \termdefinition{closed world assumption}{default assumption about facts whose status in unknown.}
 
 \termdefinitionLight{\termref{closure}\synonym circumscription\index{circumscription|see {closure}}}
-{way of implementing the \termref{closed world assumption} by restricting the \termref{models}\index{model} to those that are minimal or maximal (with respect to the local environment).}
+{structured OMS expressing a variant of the \termref{closed world assumption} by restricting the \termref{models}\index{model} to those that are minimal or maximal (with respect to the local environment).}
   \begin{note}
     \termref{Symbols} from the \termref{local environment} are assumed
     to have a fixed interpretation. Only the symbols newly declared in
@@ -2294,7 +2298,7 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
   \end{note}
 \cbe
 
-  \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where non-logical symbols are shared according to the OMS mappings in the OMS network.}
+  \termdefinition{combination}{structured OMS expressing the aggregation of all the OMS in an \termref{OMS network}, where non-logical symbols are shared according to the OMS mappings in the OMS network.}
 \begin{example}
 Consider an ontology involving a concept \texttt{Person},
 and another one involving \texttt{Human being}, and an \termref{alignment}
